<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/dining_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_evk"
            android:icon="@drawable/baseline_fastfood_24"
            android:title="@string/evk_dining_hall"
            android:checked="true"/>
        <item
            android:id="@+id/nav_parkside"
            android:icon="@drawable/baseline_local_cafe_24"
            android:title="@string/parkside_dining_hall" />
        <item
            android:id="@+id/nav_village"
            android:icon="@drawable/baseline_location_city_24"
            android:title="@string/village_dining_hall" />
    </group>
</menu>
